spade-tests/src/snapshots/spade_tests__integration__trait_tests__method_inst_of_fn_errors_nicely.snap
---
source: spade-tests/src/integration.rs
---
struct X {}

impl X {
    fn a(self) -> bool {true}
}

fn t(x: X) -> bool {
    x.inst a()
}


error: Unexpected `inst` for function call
  ┌─ testinput:8:7
  │
4 │     fn a(self) -> bool {true}
  │     -- a is defined as a function here
  ·
8 │     x.inst a()
  │       ^^^^ - Because a is a function
  │       │     
  │       Unexpected `inst`
  │
  = Consider removing the `inst`
  │
8 │     x.inst a()
  │       ----
